--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,5 @@
 name: kuromoji-elasticsearch
-version: 0.0.10
+version: 0.0.11
 type: service
 platform: ubuntu@12.04
 description: elasticsearch with kuromoji plugin
@@ -8,7 +8,17 @@ keywords:
   - kuromoji
   - japanese search
 script: |
-  BOX_HOST=$$HOST$$ ./script.sh
+  sudo apt-get update
+  sudo apt-get -y upgrade
+  sudo apt-get install -y openjdk-7-jre wget
+  sudo wget -O /tmp/elasticsearch-1.5.2.deb https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.2.deb
+  sudo dpkg -i /tmp/elasticsearch-1.5.2.deb
+  sudo sed -i 's/#http.enabled: false/http.enabled: true/g' /etc/elasticsearch/elasticsearch.yml
+  sudo sed -i 's/#network.bind_host: 192.168.0.1/network.bind_host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
+  sudo sed -i 's/#network.publish_host: 192.168.0.1/network.publish_host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
+  sudo sed -i 's/#network.host: 192.168.0.1/network.host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
+  sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-analysis-kuromoji/2.5.0
+  sudo service elasticsearch restart
 env:
   WERCKER_ELASTICSEARCH_VERSION: 1.5.2
   WERCKER_ELASTICSEARCH_URL: $$HOST$$:9200
