--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,7 +1,7 @@
 name: kuromoji-elasticsearch
-version: 0.0.12
+version: 0.0.13
 type: service
-inherits: wunki/elasticsearch@0.0.2
+inherits: wercker/ubuntu12.04-webessentials@1.0.4
 platform: ubuntu@12.04
 description: elasticsearch with kuromoji plugin
 keywords:
@@ -9,19 +9,19 @@ keywords:
   - kuromoji
   - japanese search
 script: |
-  # sudo apt-get update
-  # sudo apt-get -y upgrade
-  # sudo apt-get install -y openjdk-7-jre wget
-  # sudo wget -O /tmp/elasticsearch-1.5.2.deb https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.2.deb
-  # sudo dpkg -i /tmp/elasticsearch-1.5.2.deb
-  # sudo sed -i 's/#http.enabled: false/http.enabled: true/g' /etc/elasticsearch/elasticsearch.yml
-  # sudo sed -i 's/#network.bind_host: 192.168.0.1/network.bind_host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
-  # sudo sed -i 's/#network.publish_host: 192.168.0.1/network.publish_host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
-  # sudo sed -i 's/#network.host: 192.168.0.1/network.host: $$HOST$$/g' /etc/elasticsearch/elasticsearch.yml
-  sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-analysis-kuromoji/2.2.0
+  sudo apt-get update
+  sudo apt-get -y upgrade
+  sudo apt-get install -y openjdk-7-jre
+  sudo update-alternatives --set java $(update-alternatives --list java | grep java-7)
+  sudo wget -O /tmp/elasticsearch-1.5.2.deb https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.2.deb
+  sudo dpkg -i /tmp/elasticsearch-1.5.2.deb
+  sudo sed -i 's/#http.enabled: false/http.enabled: true/g' /etc/elasticsearch/elasticsearch.yml
+  sudo sed -i 's/#network.host: 192.168.0.1/network.host: 0.0.0.0/g' /etc/elasticsearch/elasticsearch.yml
+  sudo bash -c 'echo script.disable_dynamic: false >> /etc/elasticsearch/elasticsearch.yml'
+  sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-analysis-kuromoji/2.5.0
   sudo service elasticsearch restart
 env:
-  WERCKER_ELASTICSEARCH_VERSION: 1.2.0
+  WERCKER_ELASTICSEARCH_VERSION: 1.5.2
   WERCKER_ELASTICSEARCH_URL: $$HOST$$:9200
   WERCKER_ELASTICSEARCH_HOST: $$HOST$$
   WERCKER_ELASTICSEARCH_PORT: 9200
