--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,5 @@
 name: kuromoji-elasticsearch
-version: 0.0.13
+version: 0.0.14
 type: service
 inherits: wercker/ubuntu12.04-webessentials@1.0.4
 platform: ubuntu@12.04
@@ -9,17 +9,7 @@ keywords:
   - kuromoji
   - japanese search
 script: |
-  sudo apt-get update
-  sudo apt-get -y upgrade
-  sudo apt-get install -y openjdk-7-jre
-  sudo update-alternatives --set java $(update-alternatives --list java | grep java-7)
-  sudo wget -O /tmp/elasticsearch-1.5.2.deb https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.2.deb
-  sudo dpkg -i /tmp/elasticsearch-1.5.2.deb
-  sudo sed -i 's/#http.enabled: false/http.enabled: true/g' /etc/elasticsearch/elasticsearch.yml
-  sudo sed -i 's/#network.host: 192.168.0.1/network.host: 0.0.0.0/g' /etc/elasticsearch/elasticsearch.yml
-  sudo bash -c 'echo script.disable_dynamic: false >> /etc/elasticsearch/elasticsearch.yml'
-  sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-analysis-kuromoji/2.5.0
-  sudo service elasticsearch restart
+  ./script.sh
 env:
   WERCKER_ELASTICSEARCH_VERSION: 1.5.2
   WERCKER_ELASTICSEARCH_URL: $$HOST$$:9200
